@@ -58,3 +58,8 @@ class Win32BuildFactory(BuildFactory):
         self.steps.append(s(CompileWebKit, configuration="release"))
         self.steps.append(s(JavaScriptCoreTest))
         self.steps.append(s(LayoutTest))
+
+class QTBuildFactory(BuildFactory):
+    def __init__(self):
+        BuildFactory.__init__(self)
+        self.steps.append(s(CompileWebKitCMake))
